# GoScrape

./: .gitignore  go.mod  go.sum  main.go  pyproject.toml  run_scraper.sh
crawler/: crawler.go
db/: products.db
scripts/: convert_to_excel.py  daily_comparison.py
src/goscrape/: __init__.py
